namespace/mcsh/site/site.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site
  namespace: mcsh
  labels:
    app: site
  annotations:
    fluxcd.io/automated: 'true'
spec:
  replicas: 3
  selector:
    matchLabels:
      app: site
  template:
    metadata:
      labels:
        app: site
    spec:
      containers:
      - name: site
        image: harbor.mcserverhosting.red/mcsh/site:v1.4.5
        resources:
          requests:
            memory: 250Mi
            cpu: 100m
          limits:
            memory: 1Gi
            cpu: 500m
        ports:
        - containerPort: 80
