namespace/mcsh/site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site
  namespace: mcsh
spec:
  selector:
    app: site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: support
  namespace: mcsh
spec:
  selector:
    app: support
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
