namespace/mcsh/site/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mcsh
  namespace: mcsh
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/limit-connections: '4'
    nginx.ingress.kubernetes.io/limit-rpm: '240'
spec:
  tls:
  - hosts:
    - mcserverhosting.net
    - www.mcserverhosting.net
    secretName: mcserverhostingnet
  rules:
  - host: mcserverhosting.net
    http:
      paths:
      - path: /
        backend:
          serviceName: site
          servicePort: 80
      - path: /support
        backend:
          serviceName: support
          servicePort: 80
  - host: www.mcserverhosting.net
    http:
      paths:
      - path: /
        backend:
          serviceName: mcsh
          servicePort: 80
      - path: /support
        backend:
          serviceName: support
          servicePort: 80
